--- a/app/views/queries/index.html.erb
+++ b/app/views/queries/index.html.erb
@@ -1,37 +1,19 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Queries</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Address</th>
-      <th>Activity</th>
-      <th>Radius search</th>
-      <th>Radius catchment area</th>
-      <th>Latitude</th>
-      <th>Longitude</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @queries.each do |query| %>
-      <tr>
-        <td><%= query.address %></td>
-        <td><%= query.activity %></td>
-        <td><%= query.radius_search %></td>
-        <td><%= query.radius_catchment_area %></td>
-        <td><%= query.latitude %></td>
-        <td><%= query.longitude %></td>
-        <td><%= link_to 'Show', query %></td>
-        <td><%= link_to 'Edit', edit_query_path(query) %></td>
-        <td><%= link_to 'Destroy', query, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<div id="map"></div>
+  <% content_for(:after_js) do %>
+    <%= javascript_tag do %>
+      var handler = Gmaps.build('Google');
+      handler.buildMap({ internal: { id: 'map' } }, function() {
+        markers = handler.addMarkers(<%= raw @markers.to_json %>);
+        handler.bounds.extendWith(markers);
+        handler.fitMapToBounds();
+        if (markers.length == 0) {
+          handler.getMap().setZoom(2);
+        } else if (markers.length == 1) {
+          handler.getMap().setZoom(14);
+        }
+      });
     <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Query', new_query_path %>
+  <% end %>
+</div>
