mapping en place

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,12 @@
 @import "layouts/index";
 @import "components/index";
 @import "pages/index";
+
+.myflex {
+  display:flex;
+  justify-content: space-between;
+}
+
+.mygrow {
+  flex-grow: 1;
+}
