--- a/app/views/queries/index.html.erb
+++ b/app/views/queries/index.html.erb
@@ -1,19 +1,22 @@
-<h1>Queries</h1>
-
-<div id="map"></div>
-  <% content_for(:after_js) do %>
-    <%= javascript_tag do %>
-      var handler = Gmaps.build('Google');
-      handler.buildMap({ internal: { id: 'map' } }, function() {
-        markers = handler.addMarkers(<%= raw @markers.to_json %>);
-        handler.bounds.extendWith(markers);
-        handler.fitMapToBounds();
-        if (markers.length == 0) {
-          handler.getMap().setZoom(2);
-        } else if (markers.length == 1) {
-          handler.getMap().setZoom(14);
-        }
-      });
+<div class="myflex">
+  <div class="mygrow">
+    cards
+  </div>
+  <div id="map" style="width: 50%; height: 600px;"></div>
+    <% content_for(:after_js) do %>
+      <%= javascript_tag do %>
+        var handler = Gmaps.build('Google');
+        handler.buildMap({ internal: { id: 'map' } }, function() {
+          markers = handler.addMarkers(<%= raw @markers.to_json %>);
+          handler.bounds.extendWith(markers);
+          handler.fitMapToBounds();
+          if (markers.length == 0) {
+            handler.getMap().setZoom(2);
+          } else if (markers.length == 1) {
+            handler.getMap().setZoom(14);
+          }
+        });
+      <% end %>
     <% end %>
-  <% end %>
+  </div>
 </div>
