result card layout

--- a/app/views/queries/index.html.erb
+++ b/app/views/queries/index.html.erb
@@ -1,6 +1,6 @@
 <div class="myflex">
   <div class="mygrow">
-    cards
+    <%= render 'shared/result_card' %>
   </div>
   <div id="map" style="width: 50%; height: 600px;"></div>
     <% content_for(:after_js) do %>
