--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,9 @@
 @import "components/index";
 @import "pages/index";
 
+@import "bootstrap";
+@import "mdb";
+
 .myflex {
   display:flex;
   justify-content: space-between;
