--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,4 +1,5 @@
 // Import your components CSS files here.
 @import "alert";
 @import "navbar";
-@import "result-card"
+@import "result-card";
+@import "banner";
