--- a/app/views/queries/new.html.erb
+++ b/app/views/queries/new.html.erb
@@ -1,5 +1,10 @@
-<div class="container">
-<%= render 'form', query: @query %>
+<%= render 'shared/banner' %>
 
-<%= link_to 'Back', queries_path %>
-</div>
+  <div class="container">
+  <%= render 'form', query: @query %>
+
+  <%= link_to 'Back', queries_path %>
+
+  <%= render 'formtest' %>
+
+  </div>
