map deja bien avancee

--- a/app/views/queries/_form.html.erb
+++ b/app/views/queries/_form.html.erb
@@ -3,7 +3,7 @@
 
   <div class="form-inputs">
 
-    <%= f.input :address, label: 'Address', input_html: {value: "1 charlemagne, lyon"} %>
+    <%= f.input :address, label: 'Address', input_html: {value: "chambery"} %>
     <%= f.input :activity, label: 'Activity', placeholder: 'Enter the business', input_html: {value: "boulangerie"} %>
     <%= f.input :radius_search, label: 'Radius search in meters', placeholder: '1000',  input_html: {value: "1000"} %>
     <%= f.input :radius_catchment_area, label: 'Catchment in meters', placeholder: '200',  input_html: {value:  "500" } %>
