static map correction

--- a/app/views/shared/_result_card.html.erb
+++ b/app/views/shared/_result_card.html.erb
@@ -21,5 +21,5 @@
   <div class="btn btn-primary see-more">
     <p>See more</p>
   </div>
-  <a class="result-card-link" href="#" ></a>
+  <a class="result-card-link" href="queries/<%= session['query_id']%>" ></a>
 </div>
