--- a/app/views/queries/new.html.erb
+++ b/app/views/queries/new.html.erb
@@ -3,8 +3,8 @@
   <div class="container">
     <div class="myflex">
       <div class="mygrow">
-        <h3>Find the best place</h3>
-        <p>Get analytics and choose wisely the best place</p>
+        <p>ShopSpot helps you to find the best place for your activity</p>
+        <p>Indicate your reference zone and w</p>
       </div>
       <div class="homepageform">
         <%= render 'form', query: @query %>
