--- a/app/views/shared/_result_card.html.erb
+++ b/app/views/shared/_result_card.html.erb
@@ -18,8 +18,8 @@
       <p>Average rating : 4,5</p>
     </div>
   </div>
-  <div class="btn btn-primary see-more">
+  <div class="btn btn-primary btn-show">
     <p>See more</p>
   </div>
-  <a class="result-card-link" href="#" ></a>
+  <a class="result-card-link" href="/queries/<%= session['query'] %>" ></a>
 </div>
