--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -3,5 +3,8 @@
   margin-top: 50px;
   margin-left: auto;
   margin-right: auto;
+  background: #FAFAFA;
+  margin-top: 50px;
+  border-radius: 3px;
+  box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
 }
-
