--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -75,3 +75,13 @@
   border-left: 1px solid #E6E6E6;
   border-top: 1px solid #E6E6E6;
 }
+
+.navbar-homepage {
+  height: 70px;
+  background: white;
+  transition: all 0.3s ease;
+  padding: 0px 30px;
+  display: flex;
+  align-items: center;
+  top: 0;
+}
