--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -8,3 +8,16 @@
   border-radius: 3px;
   box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
 }
+
+.form-control-aaaa {
+  border-bottom: 0;
+}
+
+.control-label {
+  font-size: 17px;
+  font-weight: lighter;
+}
+
+#new-query {
+  padding: 20px;
+}
