--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,8 +1,6 @@
 <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://cdn.vox-cdn.com/thumbor/3job2Q0siUze1rXAHq4aXEYdX0M=/339x0:1238x599/1200x800/filters:focal(339x0:1238x599)/cdn.vox-cdn.com/uploads/chorus_image/image/45205974/uber_SafeCities_BlogHeader.0.0.png');">
   <div class="banner-content">
     <h1>ShopSpot</h1>
-    <a class="btn btn-primary btn-lg btn-show">Get started</a>
+    <a href="#homepage-bottom" class="btn btn-primary btn-lg btn-show">Get started</a>
   </div>
-    <%= render 'queries/form' %>
-
 </div>
