get the right homepage

--- a/app/assets/stylesheets/components/_show_card.scss
+++ b/app/assets/stylesheets/components/_show_card.scss
@@ -5,11 +5,11 @@
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    border:1px solid #AAA;
-    border-bottom:1px solid #BBB;
-    padding:0px;
-    margin-top:3em;
-    margin-right: 10px;
+    border: 1px solid #AAA;
+    border-bottom: 1px solid #BBB;
+    padding: 0px;
+    margin: 3em 10px 2em 0px;
+
     overflow:hidden;
     box-shadow: 0 4px 17px 0 rgba(0, 0, 0, 0.2), 0 3px 20px 0 rgba(0, 0, 0, 0.19);
     font-family: 'Roboto', sans-serif;
