--- a/app/views/queries/show.html.erb
+++ b/app/views/queries/show.html.erb
@@ -6,7 +6,7 @@
         <div class="card">
           <div class="card-content">
             <div class="card-header-blue">
-              <h3 class="card-heading"><%= @query.address %></h3>
+              <h3 class="card-heading">Analytics</h3>
             </div>
                 <div class="card-body">
                   <p>
@@ -58,10 +58,11 @@
         </div>
         <div class="buttons-next-action"
           <p>Take action and realize your dream? Contact right here</p>
-          <a class='btn btn-primary btn-lg btn-show' href='#'>View competition</a>
-            </br>
+          <a class='btn btn-primary btn-lg .btn-show' href='#'>View competition</a>
+        </div>
+        <div class="buttons-next-action"
           <p>Not enough potential customers? Surronding cities comparator right here</p>
-          <a class='btn btn-primary btn-lg btn-show' href='#'>Cities analytics</a>
+          <a class='btn btn-primary btn-lg .btn-show' href='#'>Cities analytics</a>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6">
