--- a/app/views/queries/index.html.erb
+++ b/app/views/queries/index.html.erb
@@ -32,11 +32,7 @@
         map: map
       });
     }
-    var metersPerPixel = Math.cos(<%= session["search_coordinates"][0] %> * Math.PI/180) * 2 * Math.PI * 6378137 / (256 * Math.pow(2, zoom));
 
-    var search_radius = <%= session['radius_catchment'] %> /metersPerPixel;
-console.log(search_radius);
-<% p @zoomscale %>
 
     function addconcurrents() {
     var points = [];
@@ -48,84 +44,27 @@ console.log(search_radius);
           icon: concurrence_icon,
         });
 
-        heatmap = new google.maps.visualization.HeatmapLayer({
-          data: points,
-          radius: search_radius,
-          opacity: 0.05
-        });
-        heatmap.setMap(map);
       <% end %>
     }
 
-      function toggleHeatmap() {
-        heatmap.setMap(heatmap.getMap() ? null : map);
-      }
-
-      function changeGradient() {
-        var gradient = [
-          'rgba(0, 255, 255, 0)',
-          'rgba(0, 255, 255, 1)',
-          'rgba(0, 191, 255, 1)',
-          'rgba(0, 127, 255, 1)',
-          'rgba(0, 63, 255, 1)',
-          'rgba(0, 0, 255, 1)',
-          'rgba(0, 0, 223, 1)',
-          'rgba(0, 0, 191, 1)',
-          'rgba(0, 0, 159, 1)',
-          'rgba(0, 0, 127, 1)',
-          'rgba(63, 0, 91, 1)',
-          'rgba(127, 0, 63, 1)',
-          'rgba(191, 0, 31, 1)',
-          'rgba(255, 0, 0, 1)'
-        ]
-        heatmap.set('gradient', heatmap.get('gradient') ? null : gradient);
-      }
-
-
 
     function addpopulation() {
-      <% @density.each do |item| %>
-        var coords = [
-        <% item.poly.each do |pol| %>
-          {lat:  <%= pol[1] %>, lng: <%= pol[0] %>},
-        <% end %>];
-<% pop = (item.population/1000)*255
-  pop = 255 if pop > 255
-  pop = 255 - pop
-  op = pop/255
-  pop = pop.to_i.to_s(16) %>
-
-
-        var poly = new google.maps.Polygon({
-          paths: coords,
-          strokeColor: '#00f',
-          strokeOpacity: 0.3,
-          strokeWeight: 1,
-          fillColor: '#00<%= pop %>',
-          filltemp: '#ffffff',
-          fillOpacity: 0.7,
-          population: <%= item.population %>,
-          res65: <%= item.res65.round %>,
-          res25: <%= item.res25.round %>,
-          map: map
-        });
-
-
-        poly.addListener('mouseover', function (event) {
-          var mydiv= document.getElementById('datashow');
-          str = "Population : " + this.population + "<br/>";
-          str += "+ de 65 ans : " + this.res65 + "<br/>";
-          str += "- de 25 ans : " + this.res25 + "<br/>";
-          mydiv.innerHTML = str;
-
-          //Once you have the id here, you can trigger the color change
-        });
-
+      <% @polygones.each do |zone| %>
+        var poly = new google.maps.Polygon(<%= raw zone %>);
+        poly.setMap(map);
       <% end %>
     }
 
     initMap();
     addpopulation();
-    addconcurrents();
+<!--     addconcurrents();
+ -->
+    google.maps.event.addDomListener(map, 'center_changed', function() {
+
+    });
+    google.maps.event.addDomListener(map, 'zoom_changed', function() {
+      var zoom = map.getZoom();
+    });
+
   <% end %>
 <% end %>
