--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,12 +2,18 @@
 @import "config/fonts";
 @import "config/colors";
 @import "config/bootstrap_variables";
+@import "https://fonts.googleapis.com/icon?family=Material+Icons";
+
 
 // External libraries
+@import "materialize";
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import "config/colors";
+
+
 
 // Your CSS partials
 @import "layouts/index";
@@ -15,6 +21,8 @@
 @import "pages/index";
 
 @import "bootstrap";
+
+
 
 .myflex {
   display:flex;
