--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,25 +1,84 @@
-// Specific CSS for your home-page
 #homepage-top {
-  height: 100vh;
+  text-align: center;
+  height: 20vh;
+  align-items: center;
+  justify-content: center;
+  background: white;
+  vertical-align: center;
+  h1 {
+    font-size: 45px;
+    color: #555;
+  }
+  h3 {
+    font-size: 30px;
+    font-weight: lighter;
+    color: #333;
+  }
+}
+
+#homepage-middle {
+  height: 80vh;
+  display: flex;
+  justify-content: space-around;
+  h3 {
+    font-weight: lighter
+  }
+}
+
+#btn-sign-up {
+  width: 200px;
 }
 
 #homepage-bottom {
-  height: 100vh;
+  background: #F4F4F4;
+  text-align: center;
+  h1 {
+    margin-top: 0;
+    padding: 50px;
+    font-size: 40px;
+    color: #666;
+  }
+}
+
+#homepage-expl {
+  display: flex;
+  flex-direction: column;
+  // align-items: center;
+  justify-content: center;
+  height: 80vh;
+  margin-left: 30px;
+  h3 {
+    color: #FAFAFA;
+  }
+}
+
+
+// ========== CARDS 
+
+#exp-cards {
   display: flex;
   justify-content: space-around;
 }
 
-.exp1 {
+.exp {
+  padding: 20px;
+  margin: 0 20px;
+  width: 250px;
   background: #FAFAFA;
-  margin: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 2px;
+  text-align: center !important;
 }
 
-.exp2 {
-  background: #FAFAFA;
-  margin: 20px;
+.exp-photo {
+  width: 210px;
+  height: 210px;
+  justify-content: center;
+  background-size: cover !important;
 }
 
-.exp3 {
-  background: #FAFAFA;
-  margin: 20px;
+.exp:hover {
+  background: white;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.3);
 }
