--- a/app/views/shared/_result_card.html.erb
+++ b/app/views/shared/_result_card.html.erb
@@ -21,5 +21,6 @@
   <div class="btn btn-primary btn-show">
     <p>See more</p>
   </div>
-  <a class="result-card-link" href="/queries/<%= session['query'] %>" ></a>
+
+  <a class="result-card-link" href="queries/<%= session['query_id']%>" ></a>
 </div>
