--- a/app/views/queries/index.html.erb
+++ b/app/views/queries/index.html.erb
@@ -1,8 +1,25 @@
 <%= render 'shared/navbar' %>
+    <div style="display: none;">
+<%= link_to "add pop", "/queries/10/43/2", method: :get, remote: true, id: "ajax"%></div>
 <div class="myflex">
   <div class="mygrow">
 
+
     <div id="datashow">test</div>
+        <p style="text-align:right;margin:0"><i id="infos-close" class="fa fa-close"></i></p>
+        <h4>Informations : </h4><div id="infos-current">
+          <p><b>Population : </b> --&nbsp;habitants / km<sup>2</sup></p>
+          <p><b>Revenus : </b> --&nbsp;€</p>
+          <p><b>Bas revenus :</b> --&nbsp; men / km<sup>2</sup>; --&nbsp;%</p>
+          <p><b> Résidants + de 5 ans :</b> --&nbsp; men / km²; --&nbsp;%</p>
+          <p><b>Locataires :</b> --&nbsp; men / km²; --&nbsp;%</p>
+          <p><b>Habitat collectif :</b> --&nbsp; men / km²; --&nbsp;%</p>
+          <p><b>Personnes seules :</b> --&nbsp; hab / km²; --&nbsp;%</p>
+          <p><b> 65 ans et plus :</b> --&nbsp; hab / km²; --&nbsp;%</p>
+          <p><b>25 ans et moins :</b> --&nbsp; hab / km²; --&nbsp;%</p>
+          <p><b>15 ans et moins :</b> --&nbsp; hab / ²; --&nbsp;%</p></div>
+        <div id="infos-button" style="display: none;" title="Informations délaillées">
+          <i id="infos-open" class="fa fa-info-circle fa-fw fa-lg"></i></div>
 
     <%= render 'shared/result_card' %>
 
@@ -13,16 +30,23 @@
 
 <% content_for(:after_js) do %>
   <%= javascript_tag do %>
-    var zoom = <%= @zoom %>;
     var map;
+    var polya =[];
     var search_icon = 'http://maps.google.com/mapfiles/ms/icons/blue-pushpin.png';
     var concurrence_icon = 'http://maps.gstatic.com/mapfiles/ms2/micons/red.png';
     var search = {lat: <%= session["search_coordinates"][0] %>, lng: <%= session["search_coordinates"][1] %>};
 
+    var addListenersOnPolygon = function(polygon) {
+      google.maps.event.addListener(polygon, 'mouseover', function (event) {
+      document.getElementById('datashow').innerHTML = "Population : " + polygon.population;
+      });
+    }
+
     function initMap() {
       map = new google.maps.Map(document.getElementById('map'), {
-        zoom: zoom,
-        center: search
+        zoom: <%= @zoom %>,
+        center: search,
+        mapTypeId: 'satellite'
       });
       // marker search
         var marker = new google.maps.Marker({
@@ -33,6 +57,16 @@
       });
     }
 
+    function delpoly() {
+      for (var i = 0; i < polya.length; i++) {
+       if(polya[i].id != 123) //Or whatever that you require
+         {
+           //change its color
+           polya[i].setMap(null);
+         }
+      }
+      poly.setMap(null);
+    }
 
     function addconcurrents() {
     var points = [];
@@ -47,24 +81,36 @@
       <% end %>
     }
 
+    function updatepop() {
+      var NewMapCenter = map.getCenter();
+      a = document.getElementById('ajax');
+      url = "/queries/" + map.getZoom() +"/" + NewMapCenter.lat() + "/" + NewMapCenter.lng();
+      a.href = url;
+      a.innerHTML = map.getZoom()
+      a.click();
+    }
 
     function addpopulation() {
       <% @polygones.each do |zone| %>
-        var poly = new google.maps.Polygon(<%= raw zone %>);
+        poly = new google.maps.Polygon(<%= raw zone %>);
         poly.setMap(map);
+        addListenersOnPolygon(poly);
+        polya.push(poly);
       <% end %>
     }
 
     initMap();
-    addpopulation();
 <!--     addconcurrents();
+    addpopulation();
  -->
+
     google.maps.event.addDomListener(map, 'center_changed', function() {
 
     });
     google.maps.event.addDomListener(map, 'zoom_changed', function() {
-      var zoom = map.getZoom();
+      updatepop();
     });
+
 
   <% end %>
 <% end %>
