--- a/app/views/queries/_form.html.erb
+++ b/app/views/queries/_form.html.erb
@@ -5,7 +5,7 @@
     <%= f.input :activity, label: 'Activity', class: "form-control",placeholder: 'Enter the business', input_html: {id: 'form2', value: "boulangerie"} %>
     <%= f.input :radius_search, class: 'form-control', label: 'Radius search in meters', placeholder: '1000',  input_html: {id: 'form32', value: "1000"} %>
     <%= f.input :radius_catchment_area, class: "form-control", label: 'Catchment in meters', placeholder: '200',  input_html: {id: 'form8', value:  "500" } %>
-    <%= f.button :button, "Find my personnalized results", class: "btn btn-primary btn-form-homepage"  %>
+    <%= f.button :button, "Find my results", class: "btn btn-default btn-form-homepage"  %>
   <% end %>
 
 
