--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,6 +1,6 @@
 #home-form {
   background: #FAFAFA;
-  width: 250px;
+  width: 300px;
   margin: 20px auto;
   height: 70vh;
   display: flex;
@@ -13,9 +13,28 @@
 
 #container-form {
   margin: 40px;
-  width: 150px;
+  width: 250px;
+  h3 {
+    font-size: 30px;
+  }
 }
 
 .new_query {
-  padding: 10px;
+}
+
+.btn-form-homepage {
+background: #FAFAFA;
+}
+
+#getstarted {
+  text-align: center;
+}
+
+#form3, #form2, #form32, #form8 {
+  font-size: 15px;
+  color: #999;
+}
+
+.control-label {
+  font-size: 12px;
 }
