--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -35,7 +35,7 @@
   h1 {
     margin-top: 0;
     padding: 50px;
-    font-size: 40px;
+    font-size: 30px;
     color: #666;
   }
 }
@@ -64,11 +64,18 @@
   padding: 20px;
   margin: 0 20px;
   width: 250px;
+  height: 400px;
   background: #FAFAFA;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 2px;
   text-align: center !important;
+  h4 {
+    font-size: 20px;
+  }
+  p {
+    font-size: 15px;
+  }
 }
 
 .exp-photo {
@@ -80,5 +87,5 @@
 
 .exp:hover {
   background: white;
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.3);
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.3);
 }
