--- a/app/views/queries/new.html.erb
+++ b/app/views/queries/new.html.erb
@@ -15,7 +15,9 @@
       <div class="col-xs-12 col-sm-6" style="height: 80vh;">
         <div id="home-form">
           <div id="container-form">
-            <h3>Get started</h3>
+            <div id="getstarted">
+              <h3>Get started</h3>
+            </div>
             <%= render 'form' %>
           </div>
         </div>
@@ -56,8 +58,8 @@
             <%= image_tag("analytics.png", style: 'height:100%;width:auto;') %>
           </div>
           <div class="card-description">
-            <h4><b>Analytics & more</b></h4> 
-            <p>Nothing nice in your zone ? Find more !</p>
+            <h4><b>Analytics</b></h4> 
+            <p>Get all analytics about population, competitors and compare different zones</p>
           </div> 
         </div>
       </div>  
