--- a/app/views/queries/index.html.erb
+++ b/app/views/queries/index.html.erb
@@ -1,30 +1,31 @@
 <%= render 'shared/navbar' %>
-    <div style="display: none;">
-<%= link_to "add pop", "/queries/10/43/2", method: :get, remote: true, id: "ajax"%></div>
+<div style="display: none;">
+  <%= link_to "add pop", "/queries/10/43/2", method: :get, remote: true, id: "ajax"%>
+</div>
 <div class="myflex">
   <div class="mygrow">
 
+      <%= render 'shared/result_card' %>
 
-    <div id="datashow">test</div>
-        <p style="text-align:right;margin:0"><i id="infos-close" class="fa fa-close"></i></p>
-        <h4>Informations : </h4><div id="infos-current">
-          <p><b>Population : </b> --&nbsp;habitants / km<sup>2</sup></p>
-          <p><b>Revenus : </b> --&nbsp;€</p>
-          <p><b>Bas revenus :</b> --&nbsp; men / km<sup>2</sup>; --&nbsp;%</p>
-          <p><b> Résidants + de 5 ans :</b> --&nbsp; men / km²; --&nbsp;%</p>
-          <p><b>Locataires :</b> --&nbsp; men / km²; --&nbsp;%</p>
-          <p><b>Habitat collectif :</b> --&nbsp; men / km²; --&nbsp;%</p>
-          <p><b>Personnes seules :</b> --&nbsp; hab / km²; --&nbsp;%</p>
-          <p><b> 65 ans et plus :</b> --&nbsp; hab / km²; --&nbsp;%</p>
-          <p><b>25 ans et moins :</b> --&nbsp; hab / km²; --&nbsp;%</p>
-          <p><b>15 ans et moins :</b> --&nbsp; hab / ²; --&nbsp;%</p></div>
-        <div id="infos-button" style="display: none;" title="Informations délaillées">
-          <i id="infos-open" class="fa fa-info-circle fa-fw fa-lg"></i></div>
-
-    <%= render 'shared/result_card' %>
-
-  </div>
-  <div id="map" style="width: 50%; height: 600px;"></div>
+    </div>
+    <div style="width: 60%; height: 600px; position: relative;">
+      <div style = "background-color: white; position: absolute; right: 10px; top: 50px; z-index:20">
+        <div id="infos-button"  onclick="openinf()">
+          <i id="infos-open" class="fa fa-info-circle fa-fw fa-lg"></i>
+        </div>
+        <div id="show-content" class="infohide">
+          <p style="text-align:right; margin:0" ><i id="infos-close" onclick="closeinf()" class="fa fa-close"></i></p>
+          <h3>Informations : </h3>
+          <div id="infos-current">
+            <p><b>Population : </b> <span id="pop">--</span> habitants</p>
+            <p><b>Revenus : </b> <span id="rev">--</span> €</p>
+            <p><b>65 ans et plus :</b> <span id="res65">--</span> %</p>
+            <p><b>25 ans et moins :</b> <span id="res25">--</span> %</p>
+          </div>
+        </div>
+      </div>
+      <div id="map" style="width: 100%; height: 600px;"></div>
+    </div>
   </div>
 </div>
 
@@ -35,10 +36,20 @@
     var search_icon = 'http://maps.google.com/mapfiles/ms/icons/blue-pushpin.png';
     var concurrence_icon = 'http://maps.gstatic.com/mapfiles/ms2/micons/red.png';
     var search = {lat: <%= session["search_coordinates"][0] %>, lng: <%= session["search_coordinates"][1] %>};
+    function openinf() {
+      document.getElementById('show-content').classList.remove("infohide");
+    }
+    function closeinf() {
+      document.getElementById('show-content').classList.add("infohide");
+
+    }
 
     var addListenersOnPolygon = function(polygon) {
       google.maps.event.addListener(polygon, 'mouseover', function (event) {
-      document.getElementById('datashow').innerHTML = "Population : " + polygon.population;
+      document.getElementById('pop').innerHTML = polygon.population;
+      document.getElementById('rev').innerHTML = polygon.revenus;
+      document.getElementById('res65').innerHTML = polygon.res65;
+      document.getElementById('res25').innerHTML = polygon.res25;
       });
     }
 
@@ -46,7 +57,8 @@
       map = new google.maps.Map(document.getElementById('map'), {
         zoom: <%= @zoom %>,
         center: search,
-        mapTypeId: 'satellite'
+        mapTypeId: 'satellite',
+        streetViewControl: false,
       });
       // marker search
         var marker = new google.maps.Marker({
@@ -86,7 +98,7 @@
       a = document.getElementById('ajax');
       url = "/queries/" + map.getZoom() +"/" + NewMapCenter.lat() + "/" + NewMapCenter.lng();
       a.href = url;
-      a.innerHTML = map.getZoom()
+      console.log("zoom :" + map.getZoom());
       a.click();
     }
 
@@ -105,10 +117,12 @@
  -->
 
     google.maps.event.addDomListener(map, 'center_changed', function() {
-
+        updatepop();
     });
     google.maps.event.addDomListener(map, 'zoom_changed', function() {
-      updatepop();
+      if (map.getZoom() < 15 && map.getZoom() > 5) {
+        updatepop();
+      }
     });
 
 
