--- a/app/views/queries/population.js.erb
+++ b/app/views/queries/population.js.erb
@@ -3,5 +3,6 @@ delpoly();
       <% @polygones.each do |zone| %>
         poly = new google.maps.Polygon(<%= raw zone %>);
         poly.setMap(map);
+        addListenersOnPolygon(poly);
         polya.push(poly);
       <% end %>
