--- a/app/assets/stylesheets/components/_result-card.scss
+++ b/app/assets/stylesheets/components/_result-card.scss
@@ -1,10 +1,11 @@
-.result-card {
+.rcframe {
   height: 300px;
   color: #444;
   position: relative;
   background: #FAFAFA;
   margin: 10px;
   display: flex;
+  
   // border: 1px solid #EEE;
   // box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1)
 }
