competitors en cours

--- a/app/views/queries/show.html.erb
+++ b/app/views/queries/show.html.erb
@@ -58,12 +58,11 @@
         </div>
         <div class="buttons-next-action"
           <p>Take action and realize your dream? Contact right here</p>
-          <a class='btn btn-primary btn-lg .btn-show' href='/competition'>View competition</a>
-          <%= link_to 'View competition', query_competitors_path(@query), class: 'btn btn-primary' %>
+          <%= link_to 'View competition', query_competitors_path(@query), class: 'btn btn-primary btn-lg btn-show' %>
         </div>
         <div class="buttons-next-action"
           <p>Not enough potential customers? Surronding cities comparator right here</p>
-          <a class='btn btn-primary btn-lg .btn-show' href='#'>Cities analytics</a>
+          <a class='btn btn-primary btn-lg btn-show' href='#'>Cities analytics</a>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6">
