--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -2,8 +2,7 @@
   background-color: #27B1BE !important;
   border-color: #27B1BE !important;
 }
-
 .btn-show {
-  width: 250px;
-  border-color: #27B1BE;
+    width: 250px !important;
 }
+
