--- a/app/views/shared/_result_card.html.erb
+++ b/app/views/shared/_result_card.html.erb
@@ -3,6 +3,7 @@
     <div class="rctitle">
       <p>63 rue de Marseille</p>
       <p> XXXXX</p>
+    </div>
     <div class="rcresults">
       <div class="result-card-info pop">
         <h3>Population</h3>
@@ -20,6 +21,6 @@
       <p>See more</p>
     </div>
 
-    <a class="result-card-link" href="queries/<%= session['query_id']%>" ></a>
+    <a class="result-card-lin" href="queries/<%= session['query_id']%>" >test</a>
   </div>
 </div>
