--- a/app/assets/stylesheets/components/_result-card.scss
+++ b/app/assets/stylesheets/components/_result-card.scss
@@ -1,53 +1,96 @@
 .rcframe {
-  height: 300px;
-  color: #444;
+  height: 340px;
+  color: #777;
   position: relative;
   background: #FAFAFA;
   margin: 10px;
   display: flex;
-  
+  align-items: center;
+  justify-content: center;
   // border: 1px solid #EEE;
   // box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1)
 }
 
-.result-card-address {
+.rccontent {
+  background: #F9F9F9;
   position: absolute;
-  top: 10px;
-  left: 10px;
+  padding: 10px;
+  line-height: 90%;
+  width: 90%;
+  height: 90%;
+  h3 {
+    font-size: 15px;
+    font-weight: bold;
+    color: #555;
+    margin: 5px;
+  }
+  p {
+    font-size: 15px;
+  }
 }
 
+.rcresults {
+  display: flex;
+}
 
-.result-card-pertinence {
-  position: absolute;
-  right: 10px;
-  top: 10px;
-} 
+.rctitle {
+  text-align: center;
+  line-height: 120%;
+}
 
-.see-more {
+.rcpop {
+  width: 50%;
+
+}
+
+#rcpopgraph {
+  display: flex;
+  margin-bottom: 5px;
+  width: 130px;
+  height: 70px;
+  text-align: center;
+  align-items: flex-end;
+  p {
+    font-size: 13px;
+    color: #333;
+  }
+}
+
+#rcpopgraph1 {
+  height: 40px;
+  width: 30%;
+  background: #CCC;
+}
+
+#rcpopgraph2 {
+  height: 60px;
+  width: 40%;
+  background: #EEE;
+}
+
+#rcpopgraph3 {
+  height: 20px;
+  width: 30%;
+  background: #AAA;
+}
+
+#rclinks {
   position: absolute;
   bottom: 10px;
-  right: 10px;
+  color: #FAFAFA;
+  // border-top: 1px solid rgba(0,0,0,0.3);
+  a {
+    text-decoration: none;
+  }
 }
 
-
-.result-card-info {
+#rclinks:hover {
   position: absolute;
-  top: 25px;
-  left: 10px;
+  bottom: 10px;
 }
 
-.result-card-link {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  z-index: 2;
-  opacity: 0;
-}
-
-.result-card-link:hover {
-  opacity: 0,1;
+.rccomp {
+  width: 50%;
 }
 
 .comp {
