--- a/app/views/queries/new.html.erb
+++ b/app/views/queries/new.html.erb
@@ -8,7 +8,7 @@
     <div class="row">
       <div class="col-xs-12 col-sm-6" style="height: 80vh;">
         <div id="homepage-expl">
-          <h3>ShopSpot helps you to find the best place to start your activity. </br> Get maps and analytics about people and competition around you.</h3>
+          <h3>ShopSpot helps you to find the best place to start your activity. </br></br> Get maps and analytics about people and competition around you.</h3>
           <a href="#" class="btn btn-primary" id="btn-sign-up">Sign up for free</a>
         </div>
       </div>
