--- a/app/views/queries/_form.html.erb
+++ b/app/views/queries/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.error_notification %>
 
     <%= f.input :address, label: 'Address', input_html: {value: "1 charlemagne, lyon", id: 'form3'} %>
-    <%= f.input :activity, label: 'Activity', class: "form-control",placeholder: 'Enter the business', input_html: {id: 'form2', value: "boulangerie"} %>
+    <%= f.input :activity, label: 'Activity', class: "form-control",placeholder: 'Enter the business', input_html: {id: 'form2', value: "bakery"} %>
     <%= f.input :radius_search, class: 'form-control', label: 'Radius search in meters', placeholder: '1000',  input_html: {id: 'form32', value: "1000"} %>
     <%= f.input :radius_catchment_area, class: "form-control", label: 'Catchment in meters', placeholder: '200',  input_html: {id: 'form8', value:  "500" } %>
     <%= f.button :button, "Find my results", class: "btn btn-default btn-form-homepage"  %>
