--- a/app/views/queries/new.html.erb
+++ b/app/views/queries/new.html.erb
@@ -13,12 +13,14 @@
         </div>
       </div>
       <div class="col-xs-12 col-sm-6" style="height: 80vh;">
-        <div id="home-form">
-          <div id="container-form">
-            <div id="getstarted">
-              <h3>Get started</h3>
+        <div id="homepage-form">
+          <div id="home-form">
+            <div id="container-form">
+              <div id="getstarted">
+                <h3>Get started</h3>
+              </div>
+              <%= render 'form' %>
             </div>
-            <%= render 'form' %>
           </div>
         </div>
       </div>
