--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -3,10 +3,15 @@
   width: 300px;
   margin: 20px auto;
   height: 70vh;
-  display: flex;
+  
   flex-direction: column;
   border-radius: 3px;
   box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+  
+}
+
+#homepage-form {
+  display: flex;
   align-items: center;
   justify-content: space-around;
 }
@@ -23,8 +28,9 @@
   align-items: center;
 }
 
-.btn-form-homepage {
-background: #FAFAFA;
+#btn-form-homepage {
+background: $blue;
+width: 100%;
 }
 
 #getstarted {
@@ -38,4 +44,16 @@ background: #FAFAFA;
 
 .control-label {
   font-size: 12px;
+}
+
+input:focus + label {
+  color: $blue !important;
+}
+
+input:focus {
+    border-bottom: 1px solid $blue !important;
+}
+
+form abbr {
+  text-decoration: none;
 }
