--- a/app/views/queries/_form.html.erb
+++ b/app/views/queries/_form.html.erb
@@ -1,11 +1,11 @@
 <%= simple_form_for(@query, :method => :post, :url => queries_path ) do |f| %>
   <%= f.error_notification %>
 
-    <%= f.input_field :address, label: 'Address', value: "1 charlemagne, lyon", id: 'form3' %>
-    <%= f.input_field :activity, label: 'Activity', class: "form-control", placeholder: 'Enter the business',id: 'form2', value: "boulangerie" %>
-    <%= f.input_field :radius_search, class: 'form-control', label: 'Radius search in meters', placeholder: '1000', id: 'form32', value: "1000" %>
-    <%= f.input_field :radius_catchment_area, class: "form-control", label: 'Catchment in meters', placeholder: '200', id: 'form8', value: "500" %>
-    <%= f.button :button, "Find my results", class: "btn-form-homepage"  %>
+    <%= f.input :address, label: 'Address', placeholder: '1 rue Charlemagne, Lyon', value: "1 charlemagne, lyon"  %>
+    <%= f.input :activity, label: 'Activity', id: 'form2', placeholder: 'bakery', value: "boulangerie" %>
+    <%= f.input :radius_search, label: 'Radius search in meters', placeholder: '1000', id: 'form32', value: "1000" %>
+    <%= f.input :radius_catchment_area, label: 'Catchment in meters', placeholder: '200', id: 'form8', value: "500" %>
+    <%= f.button :button, "Find my results", class: 'btn btn-primary', id: 'btn-form-homepage'  %>
 
   <% end %>
 
