--- a/app/views/shared/_result_card.html.erb
+++ b/app/views/shared/_result_card.html.erb
@@ -2,35 +2,39 @@
   <div class="rccontent">
     <div class="rctitle">
       <%= image_tag("five-stars.png", height: '10') %>
-      <p>63 rue de Marseille</p>
+      <p><%= @query.address %></p>
     </div>
     <div class="rcresults">
       <div class="rcpop">
         <h3></i>Inhabitants</h3>
-        <p> <i class="fa fa-users" aria-hidden="true"></i>
- Population : 1000 </p>
-        <p> <i class="fa fa-user-circle-o" aria-hidden="true"></i>
- Density : 1,5/m2</p>
-          <p> <i class="fa fa-birthday-cake" aria-hidden="true"></i>
- Middle age : 44</p>
+        <p> <i class="fa fa-users" aria-hidden="true"></i> Population : <%= @query.analytics[:population] %> </p>
+        <p> <i class="fa fa-user-circle-o" aria-hidden="true"></i> Density : <%= @query.analytics[:population].fdiv(@query.radius_catchment_area*@query.radius_catchment_area*0.0314).round(2) %> /10m2</p>
+        <p> <i class="fa fa-birthday-cake" aria-hidden="true"></i>
+ Middle age : <%= (@query.analytics[:res25]*12.5 + @query.analytics[:res2565]*45 + @query.analytics[:res65]*72).fdiv(100).round(1) %></p>
         <div id="rcpopgraph">
-          <div id="rcpopgraph1">
-            <p>- 25</p>
+
+          <div id="rcpopgraphhead">
+            <div id="rcpopgraphhead1"><p><%= @query.analytics[:res25] %> %</p></div>
+            <div id="rcpopgraphhead2"><p><%= @query.analytics[:res2565] %> %</p></div>
+            <div id="rcpopgraphhead3"><p><%= @query.analytics[:res65] %> %</p></div>
           </div>
-          <div id="rcpopgraph2">
-            <p>25-65</p>
+          <div id="rcpopgraphres">
+            <div id="rcpopgraphres1" style='height:<%= @query.analytics[:res25]%>%';></div>
+            <div id="rcpopgraphres2" style='height:<%= @query.analytics[:res2565]%>%';></div>
+            <div id="rcpopgraphres3" style='height:<%= @query.analytics[:res65]%>%';></div>
           </div>
-          <div id="rcpopgraph3">
-             <p>+ 65</p>
+          <div id="rcpopgraphbot">
+            <div id="rcpopgraphbot1"><p>25 -</p></div>
+            <div id="rcpopgraphbot2"><p>25 - 65</p></div>
+            <div id="rcpopgraphbot3"><p>65 +</p></div>
           </div>
+
         </div>
       </div>
       <div class="rccomp">
         <h3>Competitors</h3>
-        <p> <i class="fa fa-briefcase" aria-hidden="true"></i>
- Competitors : 13</p>
-        <p> <i class="fa fa-star" aria-hidden="true"></i>
- Average rating : 4,5</p>
+        <p> <i class="fa fa-briefcase" aria-hidden="true"></i> Competitors : <%= @competitors.count %></p>
+        <p> <i class="fa fa-star" aria-hidden="true"></i> Population / competitor : <%= @query.analytics[:population].fdiv(@competitors.count).round %></p>
       </div>
     </div>
     <div id="rclinks">
