--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,6 +43,8 @@
 
 #infos-close {
   cursor: pointer;
+  font-size: 18px;
+  float: right;
 }
 
 #show-content {
@@ -62,9 +64,52 @@
     margin: 0;
     padding-bottom: 10px;
   }
-  #infos-close {
+}
+
+#setting-open {
+  cursor: pointer;
+}
+
+#show-setting {
+  border-radius: 5px;
+  box-shadow: 1px 1px 2px black;
+  background-color: white;
+  position: absolute;
+  right: 5px;
+  top: 50px;
+  z-index:20;
+  width: 180px;
+  height: 180px;
+  font-size: 10px;
+  padding: 15px;
+  h3 {
+    font-size: 15px;
+    margin: 0;
+    padding-bottom: 10px;
+  }
+  #setting-close {
     font-size: 18px;
     float: right;
+    cursor: pointer;
   }
 
+}
+
+
+
+.rangeslider,
+.rangeslider__fill {
+  transition: background 0.3s;
+}
+
+.rangeslider--is-lowest-value {
+  background-color: white;
+}
+
+.rangeslider--is-highest-value .rangeslider__fill {
+  background-color: hotpink;
+}
+
+#slidecontainer span {
+  display: none;
 }
