--- a/app/views/queries/show.html.erb
+++ b/app/views/queries/show.html.erb
@@ -1,61 +1,19 @@
-<p id="notice"><%= notice %></p>
+<%= render 'shared/navbar' %>
+  <div id="showtop">
+    <div id=showsearch>
+      <%= render 'shared/show_search' %>
+    </div>
+    <div id="showcard">
+      <%= render 'shared/show_card' %>
+    </div>
+    <div id="showmapframe">
+      <div id="showmapcontent">
+        <%= static_map_for(@query) %>
+      </div>
+    </div>
+  </div>
 
-<div class="container">
-  <div class="row">
-      <div class="col-xs-12 col-sm-6">
-        <div class="card">
-          <div class="card-content">
-            <div class="card-header-blue">
-              <h3 class="card-heading">Analytics</h3>
-            </div>
-                <div class="card-body">
-                  <p>
-                    <strong>Activity:</strong>
-                    <%= @query.activity %>
-                  </p>
 
-                  <p>
-                    <strong>Radius search:</strong>
-                    <%= @query.radius_search %>
-                  </p>
-
-                  <p>
-                    <strong>Radius catchment area:</strong>
-                    <%= @query.radius_catchment_area %>
-                  </p>
-
-                  <p>
-                    <strong>Latitude:</strong>
-                    <%= @query.latitude %>
-                  </p>
-
-                  <p>
-                    <strong>Longitude:</strong>
-                    <%= @query.longitude %>
-                  </p>
-
-                  <p>
-                    <strong>Population:</strong>
-                    <%= %>
-                  </p>
-
-                  <p>
-                    <strong>Revenues:</strong>
-                    <%=  %>
-                  </p>
-
-                  <p>
-                    <strong>Over 65yo:</strong>
-                    <%=  %>
-                  </p>
-
-                  <p>
-                    <strong>Under 25yo:</strong>
-                    <%=  %>
-                  </p>
-                </div>
-          </div>
-        </div>
         <div class="buttons-next-action"
           <p>Take action and realize your dream? Contact right here</p>
           <%= link_to 'View competition', query_competitors_path(@query), class: 'btn btn-primary', id:'btn-show' %>
@@ -66,10 +24,7 @@
         </div>
       </div>
       <div class="col-xs-12 col-sm-6">
-          <div class="img-map">
-            <%= static_map_for(@query) %>
-          <p><%= @query.address %></p>
-          </div>
+          
       <div style="text-align: center"><%= link_to 'Download Pdf', query_path(@query, format: :pdf), class: 'btn btn-primary', id:'btn-show' %> </div>
       </div>
 
