--- a/app/assets/stylesheets/components/_result-card.scss
+++ b/app/assets/stylesheets/components/_result-card.scss
@@ -1,6 +1,6 @@
 .rcframe {
-  height: 340px;
-  color: #777;
+  height: 420px;
+  color: #555;
   position: relative;
   background: #FAFAFA;
   margin: 10px;
@@ -29,12 +29,12 @@
 }
 
 .rcresults {
-  display: flex;
 }
 
 .rctitle {
   text-align: center;
   line-height: 120%;
+  border-bottom: 1px solid #555;
   p {
   font-size: 17px;
   }
