--- a/app/assets/stylesheets/components/_show_search.scss
+++ b/app/assets/stylesheets/components/_show_search.scss
@@ -1,4 +1,4 @@
-#scframe {
+#ssframe {
   color: #555;
   background: #FAFAFA;
   margin: 10px;
@@ -8,7 +8,7 @@
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);
 }
 
-#sccontent {
+#sscontent {
   background: #F9F9F9;
   padding: 10px;
   line-height: 70%;
@@ -23,24 +23,7 @@
   }
 }
 
-#scresults {
-  margin-top: 10px;
-}
-
-#scpopgraph {
-  margin-top: 20px;
-  margin-bottom: 30px;
-  width: 150px;
-  height: 70px;
-  text-align: center;
-    p {
-    font-size: 13px;
-    font-height: 300;
-    color: #333;
-  }
-}
-
-#sctitle {
+#sstitle {
   border-bottom: 1px solid #555;
   margin: 10px 0;
 }
