--- a/app/views/shared/_result_card.html.erb
+++ b/app/views/shared/_result_card.html.erb
@@ -6,39 +6,20 @@
     </div>
     <div class="rcresults">
       <div class="rcpop">
-        <h3></i>Inhabitants</h3>
+        <h3>Inhabitants</h3>
         <p> <i class="fa fa-users" aria-hidden="true"></i> Population : <%= @query.analytics[:population] %> </p>
         <p> <i class="fa fa-user-circle-o" aria-hidden="true"></i> Density : <%= @query.analytics[:population].fdiv(@query.radius_catchment_area*@query.radius_catchment_area*0.0314).round(2) %> /10m2</p>
         <p> <i class="fa fa-birthday-cake" aria-hidden="true"></i>
  Middle age : <%= (@query.analytics[:res25]*12.5 + @query.analytics[:res2565]*45 + @query.analytics[:res65]*72).fdiv(100).round(1) %></p>
-        <div id="rcpopgraph">
-
-          <div id="rcpopgraphhead">
-            <div id="rcpopgraphhead1"><p><%= @query.analytics[:res25] %> %</p></div>
-            <div id="rcpopgraphhead2"><p><%= @query.analytics[:res2565] %> %</p></div>
-            <div id="rcpopgraphhead3"><p><%= @query.analytics[:res65] %> %</p></div>
-          </div>
-          <div id="rcpopgraphres">
-            <div id="rcpopgraphres1" style='height:<%= @query.analytics[:res25]%>%';></div>
-            <div id="rcpopgraphres2" style='height:<%= @query.analytics[:res2565]%>%';></div>
-            <div id="rcpopgraphres3" style='height:<%= @query.analytics[:res65]%>%';></div>
-          </div>
-          <div id="rcpopgraphbot">
-            <div id="rcpopgraphbot1"><p>25 -</p></div>
-            <div id="rcpopgraphbot2"><p>25 - 65</p></div>
-            <div id="rcpopgraphbot3"><p>65 +</p></div>
-          </div>
-
-        </div>
       </div>
       <div class="rccomp">
         <h3>Competitors</h3>
         <p> <i class="fa fa-briefcase" aria-hidden="true"></i> Competitors : <%= @competitors.count %></p>
-        <p> <i class="fa fa-star" aria-hidden="true"></i> Population / competitor : <%= @query.analytics[:population].fdiv(@competitors.count).round %></p>
+        <p> <i class="fa fa-star" aria-hidden="true"></i> Population / competitor : <%= @query.analytics[:population] %></p>
       </div>
     </div>
     <div id="rclinks">
-      <a href="#">New search |</a>
+      <a href="/">New search |</a>
       <a href="queries/<%= session['query_id']%>" >See more</a>
     </div>
   </div>
